<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/mainback"
    >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:padding="24sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20sp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="CourseForCoders"
                android:textSize="20sp"
                android:textColor="@color/black"

                />
            <!--
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10sp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/loginlogo2"
                />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo2"
        android:layout_marginLeft="30sp"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/coding"
        android:layout_marginLeft="30sp"
        />
</LinearLayout>
-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_form_title"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="20sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email id"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10sp"
                    android:src="@drawable/emaillogo"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/activity_main_usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:inputType="text"
                android:text="'@gmail.com"
                android:textColor="@color/black"
                android:hint="Email id"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_form_password"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10sp"
                    android:src="@drawable/passwordlogo"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <EditText
                android:id="@+id/activity_main_passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:inputType="textPassword"
                android:text="Password"
                android:textColor="@color/black"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/activity_main_loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_form_login"
                    android:textSize="15sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot password ?"
                android:textColor="@color/white"
                />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
android:orientation="vertical"
    >

    <Button
        android:id="@+id/register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70sp"
        android:text="Sign up"
        android:textSize="30sp"
        />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Contact us"
         android:layout_gravity="center_horizontal"
         android:id="@+id/help"
         android:textColor="@color/black"
         android:textSize="20sp"
         />
</LinearLayout>
        </LinearLayout>

</LinearLayout>