<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >



            <androidx.cardview.widget.CardView

                android:layout_width="200sp"
                android:layout_height="200sp"
                card_view:cardCornerRadius="30sp"
                card_view:cardElevation="8sp"
                android:background="#fff">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24sp" />

                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:src="@drawable/c"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/clang"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    android:layout_marginTop="100sp"

                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Start Preparation"
                    android:layout_gravity="bottom|center_horizontal"
                    android:id="@+id/cbtn"
                    />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView

                android:layout_width="200sp"
                android:layout_height="200sp"
                card_view:cardCornerRadius="30sp"
                card_view:cardElevation="8sp"
                android:background="#fff"
                android:layout_marginLeft="10sp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24sp" />
                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:src="@drawable/cpp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/cpp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    android:layout_marginTop="100sp"

                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Start Preparation"
                    android:layout_gravity="bottom|center_horizontal"
                    android:id="@+id/cppinterbtn"
                    />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <!-- second row -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >



            <androidx.cardview.widget.CardView

                android:layout_width="200sp"
                android:layout_height="200sp"
                card_view:cardCornerRadius="30sp"
                card_view:cardElevation="8sp"
                android:background="#fff"
                android:layout_marginTop="30sp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24sp" />

                <ImageView
                    android:id="@+id/javalogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:src="@drawable/java" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/java"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    android:layout_marginTop="100sp"

                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Start Preparation"
                    android:layout_gravity="bottom|center_horizontal"
                    android:id="@+id/javainterbtn"
                    />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView

                android:layout_width="200sp"
                android:layout_height="200sp"
                card_view:cardCornerRadius="30sp"
                card_view:cardElevation="8sp"
                android:background="#fff"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="30sp"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24sp" />
                <ImageView
                    android:id="@+id/pythonlogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:src="@drawable/python" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/python"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    android:layout_marginTop="100sp"

                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Start Preparation"
                    android:layout_gravity="bottom|center_horizontal"
                    android:id="@+id/pythoninterbtn"
                    />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <!-- Third row -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >



            <androidx.cardview.widget.CardView

                android:layout_width="200sp"
                android:layout_height="200sp"
                card_view:cardCornerRadius="30sp"
                card_view:cardElevation="8sp"
                android:background="#fff"
                android:layout_marginTop="30sp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24sp" />

                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_gravity="top|center_horizontal"
                    android:src="@drawable/javascriptlogo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Java Script"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    android:layout_marginTop="100sp"

                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Start Preparation"
                    android:layout_gravity="bottom|center_horizontal"
                    android:id="@+id/jsbtn"

                    />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView

                android:layout_width="200sp"
                android:layout_height="200sp"
                card_view:cardCornerRadius="30sp"
                card_view:cardElevation="8sp"
                android:background="#fff"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="30sp"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24sp" />
                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_gravity="top|center_horizontal"
                    android:src="@drawable/dbms" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Database Management System"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    android:layout_marginTop="100sp"

                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Start Preparation"
                    android:layout_gravity="bottom|center_horizontal"
                    android:id="@+id/dbmsinterbtn"
                    />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >



            <androidx.cardview.widget.CardView

                android:layout_width="200sp"
                android:layout_height="200sp"
                card_view:cardCornerRadius="30sp"
                card_view:cardElevation="8sp"
                android:background="#fff">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24sp" />

                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="top|center_horizontal"
                    android:src="@drawable/ds"
                    />



                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Start Preparation"
                    android:layout_gravity="bottom|center_horizontal"
                    android:id="@+id/dsinterbtn"
                    />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView

                android:layout_width="200sp"
                android:layout_height="200sp"
                card_view:cardCornerRadius="30sp"
                card_view:cardElevation="8sp"
                android:background="#fff"
                android:layout_marginLeft="10sp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24sp" />
                <ImageView
                    android:id="@+id/cpplogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:src="@drawable/php" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Start Mock"
                    android:layout_gravity="bottom|center_horizontal"
                    android:id="@+id/phpinterbtn"
                    />
            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>
